tags top margin only on tablet & up - fixes #21

--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -221,12 +221,14 @@
     @include block-dark;
     flex: 1;
 
-    &:nth-child(2) {
-      margin-top: 1em;
-    }
-
     @include breakpoint($tablet-down) {
       max-width: 49%;
+    }
+
+    @include breakpoint($tablet) {
+      &:nth-child(2) {
+        margin-top: 1em;
+      }
     }
 
     @include breakpoint($desktop) {
